--- a/samples/test.html
+++ b/samples/test.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
+    <meta charset="utf-8">
     <head>
         <title>Controller test</title>
     </head>
     <body>
         x: <div id="x"></div><br/>
         y: <div id="y"></div><br/>
-        <script src="../src/engine.js" type="text/javascript"></script>
+        <script src="../build/bigblock.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 //Engine.start()
 </script>
