--- a/samples/test.html
+++ b/samples/test.html
@@ -8,8 +8,11 @@
         <input type="button" onclick="engineStart()" value="Start"></input>
         <input type="button" onclick="engineStop()" value="Stop"></input>
         <br/>
+        time: <div id="time"></div><br/>
         x: <div id="x"></div><br/>
         y: <div id="y"></div><br/>
+        Camera x: <div id="cx"></div><br/>
+        Camera y: <div id="cy"></div><br/>
         <canvas id="canvas" style="width: 500px; height: 500px"></canvas>
 
         <script src="http://threejs.org/build/three.min.js"></script>
@@ -25,12 +28,18 @@ function engineStop() {
 
 var canvas = document.getElementById('canvas'); 
 
+var timeDom = document.getElementById('time');
 var xDom = document.getElementById('x');
 var yDom = document.getElementById('y');
+var cxDom = document.getElementById('cx');
+var cyDom = document.getElementById('cy');
 
-BigBlock.loop = function(movement) {
+BigBlock.loop = function(time, movement, cameraMovement) {
+    timeDom.innerHTML = time.toString();
     xDom.innerHTML = movement.x.toString();
     yDom.innerHTML = movement.y.toString();
+    cxDom.innerHTML = cameraMovement.x.toString();
+    cyDom.innerHTML = cameraMovement.y.toString();
 }
 
 BigBlock.load(canvas);
