--- a/samples/test.html
+++ b/samples/test.html
@@ -28,7 +28,7 @@ var width = window.innerWidth,
 scene = new THREE.Scene();
 
 camera = new THREE.PerspectiveCamera(40, width / height, 1, 1000);
-camera.position.set(0, 1, 5);
+camera.position.set(2, 5, 10);
 
 renderer = new THREE.WebGLRenderer({antialias: true});
 renderer.setSize(width, height);
@@ -36,32 +36,33 @@ renderer.setSize(width, height);
 document.body.appendChild(renderer.domElement);
 
 ambientLight = new THREE.AmbientLight(0xffffff);
-scene.add(ambientLight);
+//scene.add(ambientLight);
 
 directionalLight = new THREE.DirectionalLight(0xffffff);
-directionalLight.position.set(0, 1, 0);
+directionalLight.position.set(3, 3, 3);
 scene.add(directionalLight);
 
 scene.add(new THREE.GridHelper(10, 1));
 
 loader = new THREE.JSONLoader();
-loader.load('models/untitled.json', function(geometry, materials) {
+loader.load('models/player.json', function(geometry, materials) {
     window.x = geometry;
-    
+
     materials.forEach(function(mat) {
         mat.skinning = true;
     });
 
     cube = new THREE.SkinnedMesh(geometry, new THREE.MeshFaceMaterial(materials));
-    var anim = new THREE.Animation(cube, geometry.animations[0], THREE.AnimationHandler.CATMULLROM);
+    //var anim = new THREE.Animation(cube, geometry.animations[0], THREE.AnimationHandler.CATMULLROM);
     scene.add(cube);
-    anim.play();
-    
+    //anim.play();
+
+    camera.lookAt(new THREE.Vector3(0, 2, 0));
 
     (function renderLoop() {
         //requestAnimationFrame(renderLoop);
         var delta = clock.getDelta();
-        THREE.AnimationHandler.update(delta);
+        //THREE.AnimationHandler.update(delta);
         renderer.render(scene, camera);
     })();
 });
