--- a/samples/scene.html
+++ b/samples/scene.html
@@ -14,7 +14,7 @@
         <div id="container"></div>
 
         <script src="http://threejs.org/build/three.min.js"></script>
-        <script src="../build/bigblock.min.js"></script>
+        <script src="../build/bigblock.js"></script>
 <script type="text/javascript">
 
 var container = document.getElementById('container'); 
