added IDs to bars

--- a/samples/hud.html
+++ b/samples/hud.html
@@ -40,8 +40,8 @@ body {
     </head>
     <body>
      <div class="bb-hud">
-      <div class="bb-bar-base bb-health"></div>
-      <div class="bb-bar-base bb-stamina"></div>
+      <div class="bb-bar-base bb-health" id="bb-health"></div>
+      <div class="bb-bar-base bb-stamina" id="bb-stamina"></div>
      </div>
 
 <script src="http://threejs.org/build/three.min.js"></script>
