pointing to non-minified file

--- a/samples/hud.html
+++ b/samples/hud.html
@@ -45,7 +45,7 @@ body {
      </div>
 
 <script src="http://threejs.org/build/three.min.js"></script>
-<script src="../build/bigblock.min.js"></script>
+<script src="../build/bigblock.js"></script>
 <script type="text/javascript">
     var container = document.getElementById('container'); 
     BigBlock.load();
