added loading icon

--- a/utils/editors/character.html
+++ b/utils/editors/character.html
@@ -51,7 +51,11 @@
   <div class="container3d" id="container"></div>
   <div class="status" id="status">OK</div>
 
-  <script src="http://threejs.org/build/three.min.js"></script>
+  <div class="loading-background" id="loading">
+   <div class="loading"></div>
+  </div>
+
+  <script src="../../libs/three.min.js"></script>
   <script src="editor.js"></script>
   <script src="character.js"></script>
 
