added three.min.js to project

--- a/samples/hud.html
+++ b/samples/hud.html
@@ -13,7 +13,7 @@
  </head>
 
  <body>
-  <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="../libs/three.min.js"></script>
   <script src="../build/bigblock.js"></script>
   <script type="text/javascript">
    BigBlock.load();
