--- a/samples/scene.html
+++ b/samples/scene.html
@@ -13,7 +13,7 @@
     <body>
         <div id="container"></div>
 
-        <script src="http://threejs.org/build/three.min.js"></script>
+        <script src="../libs/three.min.js"></script>
         <script src="../build/bigblock.js"></script>
 <script type="text/javascript">
 
