--- a/samples/test.html
+++ b/samples/test.html
@@ -10,7 +10,7 @@
     </style>
     </head>
     <body>
-        <script src="http://threejs.org/build/three.min.js"></script>
+        <script src="../libs/three.min.js"></script>
         <script src="../build/bigblock.min.js"></script>
 <script type="text/javascript">
 
