--- a/samples/scene.html
+++ b/samples/scene.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="utf-8">
-    <head>
-        <title>Three.js test</title>
-        <style>
-            #container {
-                width: 1300px;
-                height: 800px;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="container"></div>
+ <meta charset="utf-8">
+ <head>
+  <title>Three.js test</title>
+  <style>
+   #container {
+      width: 1300px;
+      height: 800px;
+   }
+  </style>
+  <link href="../build/bigblock.css" rel="stylesheet"/>
+ </head>
+ <body>
+  <div id="container"></div>
 
-        <script src="../libs/three.min.js"></script>
-        <script src="../build/bigblock.js"></script>
-<script type="text/javascript">
+  <script src="../libs/three.min.js"></script>
+  <script src="../build/bigblock.js"></script>
+  <script type="text/javascript">
 
 var container = document.getElementById('container'); 
-
 BigBlock.load(container);
 
-</script>
-    </body>
+  </script>
+ </body>
 </html>
