--- a/samples/scene.html
+++ b/samples/scene.html
@@ -2,7 +2,7 @@
 <html>
  <meta charset="utf-8">
  <head>
-  <title>Three.js test</title>
+  <title>Bigblock test</title>
   <style>
    #container {
       width: 1300px;
