--- a/samples/test.html
+++ b/samples/test.html
@@ -2,7 +2,7 @@
 <html>
     <meta charset="utf-8">
     <head>
-        <title>THREE.js test</title>
+        <title>Bigblock test</title>
     <style>
         body {
             margin: 0;
